функционал по включению/выключению ВМ
